--- a/_config.yml
+++ b/_config.yml
@@ -9,14 +9,14 @@ google_analytics: # set tracking, remove from /javascripts/basic.js if unwanted.
 links:
   - name:         About
     url:          /about
-  - name:         Blog
-    url:          /blog
+  # - name:         Blog
+    #url:          /blog
     #external:     true
   - name:         Email
     url:          mailto:qyou.casia@gmail.com
     external:     true
   - name:         GitHub
-    url:          http://github.com/qyou
+    url:          https://github.com/qyou
     external:     true
 highlighter:      pygments
 permalink:        pretty
