--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ links:
   - name:         About
     url:          /about
    - name:         Blog
-    url:          /blog
+    url:          /
     #external:     true
   - name:         Email
     url:          mailto:qyou.casia@gmail.com
