--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@ google_analytics: # set tracking, remove from /javascripts/basic.js if unwanted.
 links:
   - name:         About
     url:          /about
-   - name:        Blog
-    url:          /about
+  - name:         Blog
+    url:          http://qyou.github.io
     external:     true
   - name:         Email
     url:          mailto:qyou.casia@gmail.com
