--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ links:
     url:          http://qyou.github.io
     external:     true
   - name:         Email
-    url:          mailto:qyou.casia@gmail.com
+    url:          /email
     external:     true
   - name:         GitHub
     url:          https://github.com/qyou
