--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@ links:
   - name:         Blog
     url:          http://qyou.github.io
     external:     true
-  - name:         Email
-    url:          /email
+  - name:         Contact
+    url:          /contact
     external:     true
   - name:         GitHub
     url:          https://github.com/qyou
